Tweaked padding of essential links to prevent text overflow

--- a/src/hesperian_mobile.css
+++ b/src/hesperian_mobile.css
@@ -166,7 +166,7 @@ div.hm-content-relatedlinks .ui-btn-corner-all {
 }
 
 .hm-content-essentiallinks .ui-li .ui-btn-inner a.ui-link-inherit {
-	padding-right: 15px;
+	padding-right: 20px;
 	padding-left: 10px;
 	font-size: 110%;
 }
